cmake_minimum_required(VERSION 3.25)
project(DP)

set(CMAKE_CXX_STANDARD 14)

add_executable(DP main.cpp ArrayList/SeqList.cpp ArrayList/LinkedList.cpp Stack&Queue/LinkStack.cpp Stack&Queue/CirQueue.cpp Stack&Queue/LinkQueue.cpp Stack&Queue/SeqStack.cpp String&Arrays/BF.cpp String&Arrays/KMP.cpp String&Arrays/String.cpp ACWing/forty.cpp lanqiao/two2022_1.cpp Tree/Trees.cpp luogu/p3156.cpp pack/demo.cpp Graph/AOV.cpp Sort/Sort.cpp Search/Search.cpp Stack&Queue/Hanio.cpp Stack&Queue/SeqStack.h Stack&Queue/_3_6.cpp Stack&Queue/_3_7.cpp Stack&Queue/_3_9.cpp String&Arrays/_4_3.cpp String&Arrays/_4_4.cpp String&Arrays/_4_5.cpp String&Arrays/_4_6.cpp String&Arrays/_4_7.cpp Tree/_5_8.cpp Tree/Hafuman.cpp Graph/MGraph.cpp Graph/ALGraph.cpp Graph/Prime.cpp Graph/Dijkstra.cpp Graph/Floyd.cpp Graph/_6_8.cpp Graph/_6_10.cpp Graph/_6_11.cpp Graph/_6_12.cpp Sort/MergeSort.cpp Graph/_6_9.cpp Graph/_6_7.cpp Sort/Insert.cpp Sort/shell.cpp Sort/Bubble.cpp Sort/Qsort.cpp Sort/select.cpp Sort/Heap.cpp Search/HashSearch.cpp Search/Binary.cpp Sort/BiSortTree.cpp)
